--- a/src/Views/Home.fxml
+++ b/src/Views/Home.fxml
@@ -1,8 +1,11 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1040.0" prefWidth="1920.0" stylesheets="@../Resources/CSS/Home.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeController">
+   <children>
+      <AnchorPane prefHeight="1040.0" prefWidth="255.0" />
+      <AnchorPane layoutX="200.0" prefHeight="50.0" prefWidth="1720.0" />
+      <AnchorPane layoutX="248.0" layoutY="50.0" prefHeight="990.0" prefWidth="1665.0" />
+   </children>
+</AnchorPane>
