--- a/src/Views/CommonTemplates/NoTabView.fxml
+++ b/src/Views/CommonTemplates/NoTabView.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -14,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1040.0" prefWidth="1920.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1040.0" prefWidth="1920.0"  xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <HBox layoutX="242.0" layoutY="-3.0" prefHeight="60.0" prefWidth="1680.0" style="-fx-background-color: #1976D2;" />
       <VBox layoutY="-3.0" prefHeight="1040.0" prefWidth="240.0" style="-fx-background-color: #FFFFFF;">
@@ -317,6 +319,15 @@
                         <Font size="18.0" />
                      </font></JFXTextField>
                   <JFXDatePicker defaultColor="#58b5fb" prefHeight="28.0" prefWidth="463.0" promptText="Date Of Birth" />
+                  <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                     <children>
+                        <JFXButton style="-fx-background-color: #00b67a;" text="Create" />
+                        <Button mnemonicParsing="false" style="-fx-background-color: #ef5350;" text="Cancel" />
+                     </children>
+                     <padding>
+                        <Insets right="10.0" />
+                     </padding>
+                  </HBox>
                </children>
                <padding>
                   <Insets left="20.0" right="30.0" />
