--- a/src/Views/Services.fxml
+++ b/src/Views/Services.fxml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTabPane?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <StackPane fx:id="stackpane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ServiceCategoryController">
    <children>
@@ -60,7 +72,7 @@
                                                   </HBox>
                                                   <HBox alignment="TOP_RIGHT" prefHeight="55.0" prefWidth="270.0">
                                                       <children>
-                                                          <Label text="TOTAL CUSTOMERS" textFill="#99abb4">
+                                                          <Label text="TOTAL SERVICES" textFill="#99abb4">
                                                               <font>
                                                                   <Font size="14.0" />
                                                               </font>
@@ -113,7 +125,7 @@
                                                   </HBox>
                                                   <HBox alignment="TOP_RIGHT" prefHeight="55.0" prefWidth="270.0">
                                                       <children>
-                                                          <Label text="ACTIVE CUSTOMERS" textFill="#99abb4">
+                                                          <Label text="AVAILABLE SERVICES" textFill="#99abb4">
                                                               <font>
                                                                   <Font size="14.0" />
                                                               </font>
@@ -166,7 +178,7 @@
                                                   </HBox>
                                                   <HBox alignment="TOP_RIGHT" prefHeight="55.0" prefWidth="270.0">
                                                       <children>
-                                                          <Label text="TODAY CUSTOMERS" textFill="#99abb4">
+                                                          <Label text="NON-AVAILABLE SERVICES" textFill="#99abb4">
                                                               <font>
                                                                   <Font size="14.0" />
                                                               </font>
@@ -219,7 +231,7 @@
                                                   </HBox>
                                                   <HBox alignment="TOP_RIGHT" prefHeight="55.0" prefWidth="270.0">
                                                       <children>
-                                                          <Label text="INACTIVE CUSTOMERS" textFill="#99abb4">
+                                                          <Label text="WITHDRAWN SERVICES" textFill="#99abb4">
                                                               <font>
                                                                   <Font size="14.0" />
                                                               </font>
