--- a/src/views/Appointments.fxml
+++ b/src/views/Appointments.fxml
@@ -1,29 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
-<?import com.jfoenix.controls.JFXDatePicker?>
-<?import com.jfoenix.controls.JFXTabPane?>
-<?import com.jfoenix.controls.JFXTextField?>
-<?import com.jfoenix.controls.JFXTimePicker?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <StackPane fx:id="stackpane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AppointmentController">
     <children>
         <AnchorPane prefHeight="1005.0" prefWidth="1680.0" style="-fx-background-color: #EEF5F9;" stylesheets="@../resources/CSS/Home.css">
             <children>
+
                 <JFXTabPane cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" layoutY="50.0" prefHeight="954.0" prefWidth="1680.0" scaleShape="false">
                     <Tab text="Appointments">
                         <content>
@@ -39,7 +28,7 @@
                                                                 <children>
                                                                     <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                                                         <image>
-                                                                            <Image url="@../resources/Icons/Services/services.png" />
+                                                                            <Image url="@../resources/Icons/Appointments/today.png" />
                                                                         </image>
                                                                     </ImageView>
                                                                 </children>
@@ -72,7 +61,7 @@
                                                     </HBox>
                                                     <HBox alignment="TOP_RIGHT" prefHeight="55.0" prefWidth="270.0">
                                                         <children>
-                                                            <Label text="TOTAL SERVICES" textFill="#99abb4">
+                                                            <Label text="TOTAL APPOINTMENTS TODAY" textFill="#99abb4">
                                                                 <font>
                                                                     <Font size="14.0" />
                                                                 </font>
@@ -268,11 +257,11 @@
                                             </AnchorPane>
                                             <HBox alignment="CENTER" prefHeight="50.0" prefWidth="563.0" spacing="50.0">
                                     <children>
-                                       <JFXDatePicker fx:id="tpAppSearchDate" defaultColor="#58b5fb" prefHeight="28.0" prefWidth="200.0" promptText="Search Date" />
+                                       <JFXDatePicker fx:id="dpAppSearchDate" defaultColor="#58b5fb" prefHeight="28.0" prefWidth="200.0" promptText="Search Date" />
                                        <JFXTimePicker fx:id="tpAppSearchTime" defaultColor="#58b5fb" prefHeight="28.0" prefWidth="200.0" promptText="Search Time" />
-                                       <JFXButton fx:id="btnAppSearch" prefHeight="28.0" prefWidth="79.0" style="-fx-background-color: #58b5fb;" text="Search" />
+                                       <JFXButton fx:id="btnAppSearch" onAction="#btnAppSearchClicked" prefHeight="28.0" prefWidth="79.0" style="-fx-background-color: #58b5fb;" text="Search" />
                                     </children></HBox>
-                                            <TableView fx:id="tvAppointments" prefHeight="428.0" prefWidth="799.0" style="-fx-background-color: #FFFFFF;">
+                                            <TableView fx:id="tvAppointments" onMouseClicked="#LoadDataFromtvToForm" prefHeight="428.0" prefWidth="799.0" style="-fx-background-color: #FFFFFF;">
                                                 <columns>
                                                     <TableColumn fx:id="colAppId" prefWidth="75.0" text="ID #" />
                                        <TableColumn fx:id="colAppDate" prefWidth="75.0" text="APPOINTMENT DATE" />
@@ -291,23 +280,23 @@
                                     </VBox>
                                     <VBox alignment="CENTER" layoutX="46.0" layoutY="251.0" prefHeight="545.0" prefWidth="480.0" spacing="30.0">
                                         <children>
-                                 <JFXTextField fx:id="taAppCustId" onKeyPressed="#btnSearchCustomerName" prefHeight="46.0" prefWidth="430.0" promptText=" Customer Id" />
-                                            <JFXTextField fx:id="taAppId" disable="true" promptText="Appointment ID">
+                                 <JFXTextField fx:id="tfAppCustId" onKeyPressed="#EnterKeyPressed" prefHeight="46.0" prefWidth="430.0" promptText=" Customer Id" />
+                                            <JFXTextField fx:id="tfAppId" disable="true" promptText="Appointment ID">
                                                 <font>
                                                     <Font size="18.0" />
                                                 </font>
                                             </JFXTextField>
-                                            <JFXTextField fx:id="taCustName" disable="true" promptText="Customer Name">
+                                            <JFXTextField fx:id="tfCustName" disable="true" promptText="Customer Name">
                                                 <font>
                                                     <Font size="18.0" />
                                                 </font>
                                             </JFXTextField>
-                                 <JFXDatePicker fx:id="dpAPPDate" defaultColor="#00b67a" disable="true" prefHeight="28.0" prefWidth="556.0" promptText="Search Date" />
-                                 <JFXTimePicker fx:id="dpAppTime" defaultColor="#00b67a" disable="true" prefHeight="28.0" prefWidth="543.0" promptText="Search Time" />
+                                 <JFXDatePicker fx:id="dpAPPDate" defaultColor="#00b67a" disable="true" prefHeight="28.0" prefWidth="556.0" promptText="Appointment Date" />
+                                 <JFXTimePicker fx:id="tpAppTime" defaultColor="#00b67a" disable="true" prefHeight="28.0" prefWidth="543.0" promptText="Appointment Time" />
                                             <JFXComboBox fx:id="cbAppState" disable="true" layoutX="30.0" layoutY="253.0" prefHeight="25.0" prefWidth="447.0" promptText="Select Appointment State" />
                                             <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                                                 <children>
-                                                    <JFXButton fx:id="btnAppCreate" disable="true" prefHeight="36.0" prefWidth="85.0" style="-fx-background-color: #00b67a;" text="Create" />
+                                                    <JFXButton fx:id="btnAppCreate" disable="true" onAction="#CreateNewAppointment" prefHeight="36.0" prefWidth="85.0" style="-fx-background-color: #00b67a;" text="Create" />
                                                     <JFXButton fx:id="btnAppUpdate" disable="true" prefHeight="37.0" prefWidth="85.0" style="-fx-background-color: yellow;" text="Update" />
                                                 </children>
                                                 <padding>
@@ -319,6 +308,7 @@
                                             <Insets left="20.0" right="30.0" />
                                         </padding>
                                     </VBox>
+                                    
                                 </children>
                             </AnchorPane>
                         </content>
@@ -338,7 +328,7 @@
                                                                 <children>
                                                                     <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                                                         <image>
-                                                                            <Image url="@../resources/Icons/Common/servicecategory.png" />
+                                                                            <Image url="@../resources/Icons/Appointments/all.png" />
                                                                         </image>
                                                                     </ImageView>
                                                                 </children>
