--- a/src/views/Appointments.fxml
+++ b/src/views/Appointments.fxml
@@ -16,7 +16,7 @@
                 <JFXTabPane cacheShape="false" centerShape="false" depthTest="DISABLE" focusTraversable="false" layoutY="50.0" prefHeight="954.0" prefWidth="1680.0" scaleShape="false">
                     <Tab text="Appointments">
                         <content>
-                            <AnchorPane prefHeight="841.0" prefWidth="1335.0">
+                            <AnchorPane onKeyPressed="#ClearAndResetAll" prefHeight="841.0" prefWidth="1335.0">
                                 <children>
                                     <HBox alignment="CENTER" layoutY="25.0" prefHeight="90.0" prefWidth="1680.0" spacing="100.0">
                                         <children>
@@ -62,165 +62,6 @@
                                                     <HBox alignment="TOP_RIGHT" prefHeight="55.0" prefWidth="270.0">
                                                         <children>
                                                             <Label text="TOTAL APPOINTMENTS TODAY" textFill="#99abb4">
-                                                                <font>
-                                                                    <Font size="14.0" />
-                                                                </font>
-                                                                <padding>
-                                                                    <Insets right="28.0" />
-                                                                </padding>
-                                                            </Label>
-                                                        </children>
-                                                    </HBox>
-                                                </children>
-                                            </VBox>
-                                            <VBox prefHeight="90.0" prefWidth="270.0" style="-fx-background-color: #FFFFFF;">
-                                                <children>
-                                                    <HBox prefHeight="118.0" prefWidth="270.0">
-                                                        <children>
-                                                            <HBox alignment="CENTER" prefHeight="78.0" prefWidth="129.0">
-                                                                <children>
-                                                                    <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                                                        <image>
-                                                                            <Image url="@../resources/Icons/Common/active.png" />
-                                                                        </image>
-                                                                    </ImageView>
-                                                                </children>
-                                                                <opaqueInsets>
-                                                                    <Insets />
-                                                                </opaqueInsets>
-                                                                <padding>
-                                                                    <Insets right="10.0" />
-                                                                </padding>
-                                                            </HBox>
-                                                            <HBox alignment="CENTER_RIGHT" prefHeight="69.0" prefWidth="143.0">
-                                                                <children>
-                                                                    <Label text="150" textFill="#00b67a">
-                                                                        <font>
-                                                                            <Font size="48.0" />
-                                                                        </font>
-                                                                        <HBox.margin>
-                                                                            <Insets right="28.0" />
-                                                                        </HBox.margin>
-                                                                    </Label>
-                                                                </children>
-                                                                <opaqueInsets>
-                                                                    <Insets />
-                                                                </opaqueInsets>
-                                                                <HBox.margin>
-                                                                    <Insets />
-                                                                </HBox.margin>
-                                                            </HBox>
-                                                        </children>
-                                                    </HBox>
-                                                    <HBox alignment="TOP_RIGHT" prefHeight="55.0" prefWidth="270.0">
-                                                        <children>
-                                                            <Label text="AVAILABLE SERVICES" textFill="#99abb4">
-                                                                <font>
-                                                                    <Font size="14.0" />
-                                                                </font>
-                                                                <padding>
-                                                                    <Insets right="28.0" />
-                                                                </padding>
-                                                            </Label>
-                                                        </children>
-                                                    </HBox>
-                                                </children>
-                                            </VBox>
-                                            <VBox prefHeight="90.0" prefWidth="270.0" style="-fx-background-color: #FFFFFF;">
-                                                <children>
-                                                    <HBox prefHeight="118.0" prefWidth="270.0">
-                                                        <children>
-                                                            <HBox alignment="CENTER" prefHeight="78.0" prefWidth="129.0">
-                                                                <children>
-                                                                    <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                                                        <image>
-                                                                            <Image url="@../resources/Icons/Services/non-available.png" />
-                                                                        </image>
-                                                                    </ImageView>
-                                                                </children>
-                                                                <opaqueInsets>
-                                                                    <Insets />
-                                                                </opaqueInsets>
-                                                                <padding>
-                                                                    <Insets right="10.0" />
-                                                                </padding>
-                                                            </HBox>
-                                                            <HBox alignment="CENTER_RIGHT" prefHeight="69.0" prefWidth="143.0">
-                                                                <children>
-                                                                    <Label text="150" textFill="#ffff00e5">
-                                                                        <font>
-                                                                            <Font size="48.0" />
-                                                                        </font>
-                                                                        <HBox.margin>
-                                                                            <Insets right="28.0" />
-                                                                        </HBox.margin>
-                                                                    </Label>
-                                                                </children>
-                                                                <opaqueInsets>
-                                                                    <Insets />
-                                                                </opaqueInsets>
-                                                                <HBox.margin>
-                                                                    <Insets />
-                                                                </HBox.margin>
-                                                            </HBox>
-                                                        </children>
-                                                    </HBox>
-                                                    <HBox alignment="TOP_RIGHT" prefHeight="55.0" prefWidth="270.0">
-                                                        <children>
-                                                            <Label text="NON-AVAILABLE SERVICES" textFill="#99abb4">
-                                                                <font>
-                                                                    <Font size="14.0" />
-                                                                </font>
-                                                                <padding>
-                                                                    <Insets right="28.0" />
-                                                                </padding>
-                                                            </Label>
-                                                        </children>
-                                                    </HBox>
-                                                </children>
-                                            </VBox>
-                                            <VBox prefHeight="90.0" prefWidth="270.0" style="-fx-background-color: #FFFFFF;">
-                                                <children>
-                                                    <HBox prefHeight="118.0" prefWidth="270.0">
-                                                        <children>
-                                                            <HBox alignment="CENTER" prefHeight="78.0" prefWidth="129.0">
-                                                                <children>
-                                                                    <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                                                        <image>
-                                                                            <Image url="@../resources/Icons/discontinued.png" />
-                                                                        </image>
-                                                                    </ImageView>
-                                                                </children>
-                                                                <opaqueInsets>
-                                                                    <Insets />
-                                                                </opaqueInsets>
-                                                                <padding>
-                                                                    <Insets right="10.0" />
-                                                                </padding>
-                                                            </HBox>
-                                                            <HBox alignment="CENTER_RIGHT" prefHeight="69.0" prefWidth="143.0">
-                                                                <children>
-                                                                    <Label text="150" textFill="#ef5350">
-                                                                        <font>
-                                                                            <Font size="48.0" />
-                                                                        </font>
-                                                                        <HBox.margin>
-                                                                            <Insets right="28.0" />
-                                                                        </HBox.margin>
-                                                                    </Label>
-                                                                </children>
-                                                                <opaqueInsets>
-                                                                    <Insets />
-                                                                </opaqueInsets>
-                                                                <HBox.margin>
-                                                                    <Insets />
-                                                                </HBox.margin>
-                                                            </HBox>
-                                                        </children>
-                                                    </HBox>
-                                                    <HBox alignment="TOP_RIGHT" prefHeight="55.0" prefWidth="270.0">
-                                                        <children>
-                                                            <Label text="DISCONTINUED SERVICES" textFill="#99abb4">
                                                                 <font>
                                                                     <Font size="14.0" />
                                                                 </font>
@@ -297,7 +138,7 @@
                                             <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                                                 <children>
                                                     <JFXButton fx:id="btnAppCreate" disable="true" onAction="#CreateNewAppointment" prefHeight="36.0" prefWidth="85.0" style="-fx-background-color: #00b67a;" text="Create" />
-                                                    <JFXButton fx:id="btnAppUpdate" disable="true" prefHeight="37.0" prefWidth="85.0" style="-fx-background-color: yellow;" text="Update" />
+                                                    <JFXButton fx:id="btnAppUpdate" disable="true" onAction="#UpdateAppointment" prefHeight="37.0" prefWidth="85.0" style="-fx-background-color: yellow;" text="Update" />
                                                 </children>
                                                 <padding>
                                                     <Insets right="10.0" />
@@ -399,8 +240,8 @@
                                  </AnchorPane>
                                  <HBox alignment="CENTER" prefHeight="50.0" prefWidth="563.0" spacing="50.0">
                                     <children>
-                                       <JFXTextField fx:id="taAllAppIdSearch" promptText="Appointment Id" />
-                                       <JFXTextField fx:id="taAllAppcCustIdSearch" promptText="Customer Name" />
+                                       <JFXTextField fx:id="tfAllAppIdSearch" onMouseClicked="#SearchALLAppointmentsById" promptText="Appointment Id" />
+                                       <JFXTextField fx:id="tfAllAppcCustIdSearch" onMouseClicked="#SearchALLAppointmentsByCustomerName" promptText="Customer Name" />
                                        <JFXDatePicker fx:id="dpAllAppFromSearch" defaultColor="#58b5fb" prefHeight="28.0" prefWidth="200.0" promptText="From" />
                                        <JFXDatePicker fx:id="dpAllAppToSearch" defaultColor="#58b5fb" prefHeight="28.0" prefWidth="200.0" promptText="To" />
                                     </children>
@@ -411,7 +252,7 @@
                                        <TableColumn fx:id="colAllCustName" prefWidth="75.0" text="CUSTOMER NAME" />
                                        <TableColumn fx:id="colAllAppBookedDate" prefWidth="75.0" text="BOOKED DATE" />
                                        <TableColumn fx:id="colAllAppDate" prefWidth="75.0" text="APPOINTMENT DATE" />
-                                       <TableColumn fx:id="colAllAppTime" prefWidth="75.0" text="TIME" />
+                                       <TableColumn fx:id="colAllAppTime" prefWidth="75.0" text="Appointment TIME" />
                                        <TableColumn fx:id="colAllAppState" prefWidth="75.0" text="STATE" />
                                     </columns>
                                     <VBox.margin>
